--- a/index.html
+++ b/index.html
@@ -8,31 +8,11 @@
     <!-- fonts -->
     <link href="https://fonts.cdnfonts.com/css/orbitron" rel="stylesheet" />
     <link
-      rel="stylesheet"
-      type="text/css"
-      href="//fonts.googleapis.com/css?family=Orbitron"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
       href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
     <!-- styles -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css"
-      integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <title>Gorban Transportation</title>
   </head>
 
@@ -49,8 +29,6 @@
           </div>
         </div></a
       >
-
-      <!-- header menu starts -->
       <nav>
         <ul class="header__menu">
           <li>
@@ -77,20 +55,12 @@
           </svg>
         </button>
       </nav>
-      <!-- header menu ends -->
     </header>
     <!-- header ends -->
 
-    <div class="hero__container wow">
-      <a name="about"></a>
-
-      <!-- hero starts -->
+    <!-- hero starts -->
+    <div class="hero__container">
       <section class="hero main-wrapper">
-        <!-- <div class="hero__logo-wrapper">
-          <div class="hero__logo">
-            <img class="header__logo" src="/logo.png" alt="Logo image" />
-          </div>
-        </div> -->
         <div class="hero__logo">
           <img class="header__logo" src="/logo.png" alt="Logo image" />
         </div>
@@ -126,11 +96,10 @@
           </div>
         </div>
       </section>
-      <!-- hero ends -->
     </div>
+    <!-- hero ends -->
 
     <!-- about starts -->
-
     <section class="about">
       <a name="about"></a>
       <h3 class="section__title">About</h3>
@@ -268,7 +237,7 @@
     <section class="contact">
       <div class="contact__wrapper main-wrapper">
         <div class="gallery__title main-wrapper">
-          <h3 class="gallery__text1">Contact</h3>
+          <h3 class="section__title">Contact</h3>
           <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
         </div>
         <p class="contact__text">
@@ -277,8 +246,8 @@
           Would you be open to discussing <br />
           potential ways we could work together?
         </p>
-        <div class="hero__btns">
-          <a class="hero__btn1 btn" href="mailto:gortrans@live.com">
+        <div class="btns__container">
+          <a class="btn" href="mailto:gortrans@live.com">
             <div>gortrans@live.com</div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -295,7 +264,7 @@
             </svg>
           </a>
 
-          <a class="hero__btn2 btn" href="tel:+13145047886">
+          <a class="btn" href="tel:+13145047886">
             <div>314-504-7886</div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -312,11 +281,11 @@
           </a>
 
           <a
-            class="hero__btn3 btn"
+            class="btn"
             href="https://www.google.com/maps?q=14+silvercote+dr,+wentzville,+mo+63385"
             target="_blank"
           >
-            <div>Open Maps</div>
+            <div class="btn-text">14 Silvercote Dr, Wentzville, MO 63385</div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
@@ -332,9 +301,11 @@
           </a>
         </div>
       </div>
+    </section>
+    <!-- contact ends -->
 
-      <!-- slider starts -->
-      <!-- <div class="hero__container-slider main-wrapper wow">
+    <!-- slider starts -->
+    <!-- <div class="hero__container-slider main-wrapper wow">
         <div class="slider__container">
           <div
             class="slider"
@@ -414,139 +385,9 @@
           </div>
         </div>
       </div> -->
-      <!-- slider ends -->
-    </section>
-    <!-- contact ends -->
-
-    <!-- gallery starts -->
-    <a name="gallery"></a>
-    <div class="gallery main-wrapper">
-      <a
-        href="https://unsplash.it/1200/768.jpg?image=251"
-        data-toggle="lightbox"
-        data-gallery="gallery"
-      >
-        <img
-          src="https://unsplash.it/600.jpg?image=251"
-          class="img-fluid custom-thumbnail"
-        />
-      </a>
-      <a
-        href="https://unsplash.it/1200/768.jpg?image=252"
-        data-toggle="lightbox"
-        data-gallery="gallery"
-      >
-        <img
-          src="https://unsplash.it/600.jpg?image=252"
-          class="img-fluid custom-thumbnail"
-        />
-      </a>
-      <a
-        href="https://unsplash.it/1200/768.jpg?image=253"
-        data-toggle="lightbox"
-        data-gallery="gallery"
-      >
-        <img
-          src="https://unsplash.it/600.jpg?image=253"
-          class="img-fluid custom-thumbnail"
-        />
-      </a>
-
-      <a
-        href="https://unsplash.it/1200/768.jpg?image=254"
-        data-toggle="lightbox"
-        data-gallery="gallery"
-      >
-        <img
-          src="https://unsplash.it/600.jpg?image=254"
-          class="img-fluid custom-thumbnail"
-        />
-      </a>
-      <a
-        href="https://unsplash.it/1200/768.jpg?image=255"
-        data-toggle="lightbox"
-        data-gallery="gallery"
-      >
-        <img
-          src="https://unsplash.it/600.jpg?image=255"
-          class="img-fluid custom-thumbnail"
-        />
-      </a>
-      <a
-        href="https://unsplash.it/1200/768.jpg?image=256"
-        data-toggle="lightbox"
-        data-gallery="gallery"
-      >
-        <img
-          src="https://unsplash.it/600.jpg?image=256"
-          class="img-fluid custom-thumbnail"
-        />
-      </a>
-    </div>
-    <!-- gallery ends -->
-
-    <div class="gallery__title main-wrapper">
-      <h3 class="gallery__text1">Gallery</h3>
-      <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
-    </div>
+    <!-- slider ends -->
 
     <!-- scripts -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"
-      integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"
-      integrity="sha512-YibiFIKqwi6sZFfPm5HNHQYemJwFbyyYHjrr3UT+VobMt/YBo1kBxgui5RWc4C3B4RJMYCdCAJkbXHt+irKfSA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"
-      integrity="sha512-Rf6oM/I7fgwjRVfP5OjsfOP8hPCjqFkENQuDS+mOZqq+Qf7F8TPRzOYOu3fs+I8F6h63TfBum7xEpJws2qPwtA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
     <script type="module" src="./src/main.js"></script>
-
-    <script>
-      $(document).on("click", '[data-toggle="lightbox"]', function (event) {
-        event.preventDefault();
-        $(this).ekkoLightbox();
-      });
-    </script>
-
-    <script>
-      let lastScrollY = window.scrollY;
-
-      window.addEventListener("scroll", () => {
-        const header = document.querySelector(".header");
-        if (window.scrollY > lastScrollY && window.scrollY > 500) {
-          // Скрываем хедер при прокрутке вниз, если прокрутили больше 50px
-          header.classList.add("hidden");
-        } else {
-          // Показываем хедер при прокрутке вверх
-          header.classList.remove("hidden");
-        }
-        lastScrollY = window.scrollY;
-      });
-    </script>
   </body>
 </html>
