--- a/index.html
+++ b/index.html
@@ -235,12 +235,38 @@
     <!-- about ends -->
 
     <!-- gallery starts -->
-    <a href="/public/gallery/1.jpeg" data-lightbox="roadtrip"
-      >Image #2
-      <img src="/public/gallery/1.jpeg" alt="" />
-    </a>
-    <a href="/public/gallery/2.JPEG" data-lightbox="roadtrip">Image #3</a>
-    <a href="/public/gallery/3.JPG" data-lightbox="roadtrip">Image #4</a>
+    <div class="gallery">
+      <a href="/public/gallery/1.jpeg" data-lightbox="auto">
+        <img src="/public/gallery/1.jpeg" alt="" />
+      </a>
+      <a href="/public/gallery/2.JPEG" data-lightbox="auto">
+        <img src="/public/gallery/2.JPEG" alt="" />
+      </a>
+      <a href="/public/gallery/3.JPG" data-lightbox="auto">
+        <img src="/public/gallery/3.JPG" alt="" />
+      </a>
+      <a href="/public/gallery/4.jpg" data-lightbox="auto">
+        <img src="/public/gallery/4.jpg" alt="" />
+      </a>
+      <a href="/public/gallery/5.jpg" data-lightbox="auto">
+        <img src="/public/gallery/5.jpg" alt="" />
+      </a>
+      <a href="/public/gallery/6.jpg" data-lightbox="auto">
+        <img src="/public/gallery/6.jpg" alt="" />
+      </a>
+      <a href="/public/gallery/7.jpg" data-lightbox="auto">
+        <img src="/public/gallery/7.jpg" alt="" />
+      </a>
+      <a href="/public/gallery/8.jpg" data-lightbox="auto">
+        <img src="/public/gallery/8.jpg" alt="" />
+      </a>
+      <a href="/public/gallery/9.jpg" data-lightbox="auto">
+        <img src="/public/gallery/9.jpg" alt="" />
+      </a>
+      <a href="/public/gallery/10.jpg" data-lightbox="auto">
+        <img src="/public/gallery/10.jpg" alt="" />
+      </a>
+    </div>
     <!-- gallery ends -->
 
     <!-- contact starts -->
