--- a/index.html
+++ b/index.html
@@ -234,14 +234,14 @@
 
     <!-- gallery starts -->
     <!-- Create links -->
-    <a data-fslightbox="gallery" href="/public/gallery/2.JPEG">
-      <img src="/public/gallery/2.JPEG" alt="" />
+    <a data-fslightbox="gallery" href="/public/img1.jpg">
+      <img src="/public/img1.jpg" alt="" />
     </a>
-    <a data-fslightbox="gallery" href="/public/gallery/3.JPG">
-      <img src="/public/gallery/3.JPG" alt="" />
+    <a data-fslightbox="gallery" href="/public/img2.jpg">
+      <img src="/public/img2.jpg" alt="" />
     </a>
-    <a data-fslightbox="gallery" href="/public/gallery/4.jpg">
-      <img src="/public/gallery/4.jpg" alt="" />
+    <a data-fslightbox="gallery" href="/public/img3.jpg">
+      <img src="/public/img3.jpg" alt="" />
     </a>
 
     <!-- gallery ends -->
@@ -416,8 +416,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/fslightbox-basic-3.4.1/fslightbox.js"></script>
     <!-- Main JS -->
     <script type="module" src="./src/main.js"></script>
+    <script src="./src/fslightbox.js"></script>
   </body>
 </html>
