--- a/index.html
+++ b/index.html
@@ -234,16 +234,9 @@
 
     <!-- gallery starts -->
     <!-- Create links -->
-    <a data-fslightbox="gallery" href="/public/img1.jpg">
-      <img src="/public/img1.jpg" alt="" />
+    <a data-fslightbox="gallery" href="https://i.imgur.com/fsyrScY.jpeg">
+      An image
     </a>
-    <a data-fslightbox="gallery" href="/public/img2.jpg">
-      <img src="/public/img2.jpg" alt="" />
-    </a>
-    <a data-fslightbox="gallery" href="/public/img3.jpg">
-      <img src="/public/img3.jpg" alt="" />
-    </a>
-
     <!-- gallery ends -->
 
     <!-- contact starts -->
