--- a/index.html
+++ b/index.html
@@ -234,9 +234,7 @@
 
     <!-- gallery starts -->
     <!-- Create links -->
-    <a data-fslightbox="gallery" href="https://i.imgur.com/fsyrScY.jpeg">
-      An image
-    </a>
+    <a data-fslightbox="gallery" href="/public/img1.jpg"> An image </a>
     <!-- gallery ends -->
 
     <!-- contact starts -->
