--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
 
     <!-- gallery starts -->
     <!-- Create links -->
-    <a data-fslightbox="gallery" href="./images/img1.jpg"> An image </a>
+    <a data-fslightbox="gallery" href="/img1.jpg">
+      <img src="/img1.jpg" alt="" /> An image
+    </a>
     <!-- gallery ends -->
 
     <!-- contact starts -->
