--- a/index.html
+++ b/index.html
@@ -100,143 +100,224 @@
     <!-- hero ends -->
 
     <!-- about starts -->
-    <section class="about">
-      <a name="about"></a>
+    <a name="about"></a>
+    <section class="about__container">
       <h3 class="section__title">About</h3>
-      <div class="about__card one">
-        <div class="about__img">
-          <img src="/public/imgs/img12.jpg" alt="" />
-        </div>
-
-        <div class="about__info">
-          <div class="about__i1 icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
-              />
-            </svg>
+      <div class="about">
+        <div class="about__card one">
+          <div class="about__img">
+            <img src="/public/imgs/img12.jpg" alt="" />
           </div>
-          <h2 class="about__text1">
-            Large fleet <br />
-            of auto carriers
-          </h2>
-          <p class="about__text2">
-            We have a large fleet of enclosed and open auto carriers.
-          </p>
-        </div>
-      </div>
 
-      <div class="about__card two">
-        <div class="about__img">
-          <img src="/public/imgs/img6.jpg" alt="" />
-        </div>
-
-        <div class="about__info">
-          <div class="about__i2 icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M15.59 14.37a6 6 0 0 1-5.84 7.38v-4.8m5.84-2.58a14.98 14.98 0 0 0 6.16-12.12A14.98 14.98 0 0 0 9.631 8.41m5.96 5.96a14.926 14.926 0 0 1-5.841 2.58m-.119-8.54a6 6 0 0 0-7.381 5.84h4.8m2.581-5.84a14.927 14.927 0 0 0-2.58 5.84m2.699 2.7c-.103.021-.207.041-.311.06a15.09 15.09 0 0 1-2.448-2.448 14.9 14.9 0 0 1 .06-.312m-2.24 2.39a4.493 4.493 0 0 0-1.757 4.306 4.493 4.493 0 0 0 4.306-1.758M16.5 9a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
-              />
-            </svg>
+          <div class="about__info">
+            <div class="about__i1 icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
+                />
+              </svg>
+            </div>
+            <h2 class="about__text1">
+              Large fleet <br />
+              of auto carriers
+            </h2>
+            <p class="about__text2">
+              We have a large fleet of enclosed and open auto carriers.
+            </p>
           </div>
-          <h2 class="about__text1">
-            Quick and <br />
-            Reliable
-          </h2>
-          <p class="about__text2">
-            We provide quick and reliable vehicle transportation across the U.S.
-            and Canada.
-          </p>
-        </div>
-      </div>
-
-      <div class="about__card three">
-        <div class="about__img">
-          <img src="/public/imgs/img3.jpg" alt="" />
         </div>
 
-        <div class="about__info">
-          <div class="about__i3 icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M4.5 12a7.5 7.5 0 0 0 15 0m-15 0a7.5 7.5 0 1 1 15 0m-15 0H3m16.5 0H21m-1.5 0H12m-8.457 3.077 1.41-.513m14.095-5.13 1.41-.513M5.106 17.785l1.15-.964m11.49-9.642 1.149-.964M7.501 19.795l.75-1.3m7.5-12.99.75-1.3m-6.063 16.658.26-1.477m2.605-14.772.26-1.477m0 17.726-.26-1.477M10.698 4.614l-.26-1.477M16.5 19.794l-.75-1.299M7.5 4.205 12 12m6.894 5.785-1.149-.964M6.256 7.178l-1.15-.964m15.352 8.864-1.41-.513M4.954 9.435l-1.41-.514M12.002 12l-3.75 6.495"
-              />
-            </svg>
+        <div class="about__card two">
+          <div class="about__img">
+            <img src="/public/imgs/img6.jpg" alt="" />
           </div>
-          <h2 class="about__text1">
-            Engineered <br />
-            Focused
-          </h2>
-          <p class="about__text2">
-            We have a unique focus on transporting engineering and prototype
-            vehicles.
-          </p>
-        </div>
-      </div>
 
-      <div class="about__card four">
-        <div class="about__img">
-          <img src="/public/imgs/img1.jpg" alt="" />
-        </div>
-
-        <div class="about__info">
-          <div class="about__i4 icon">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z"
-              />
-            </svg>
+          <div class="about__info">
+            <div class="about__i2 icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M15.59 14.37a6 6 0 0 1-5.84 7.38v-4.8m5.84-2.58a14.98 14.98 0 0 0 6.16-12.12A14.98 14.98 0 0 0 9.631 8.41m5.96 5.96a14.926 14.926 0 0 1-5.841 2.58m-.119-8.54a6 6 0 0 0-7.381 5.84h4.8m2.581-5.84a14.927 14.927 0 0 0-2.58 5.84m2.699 2.7c-.103.021-.207.041-.311.06a15.09 15.09 0 0 1-2.448-2.448 14.9 14.9 0 0 1 .06-.312m-2.24 2.39a4.493 4.493 0 0 0-1.757 4.306 4.493 4.493 0 0 0 4.306-1.758M16.5 9a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"
+                />
+              </svg>
+            </div>
+            <h2 class="about__text1">
+              Quick and <br />
+              Reliable
+            </h2>
+            <p class="about__text2">
+              We provide quick and reliable vehicle transportation across the
+              U.S. and Canada.
+            </p>
           </div>
-          <h2 class="about__text1">
-            Safe and <br />
-            Efficient
-          </h2>
-          <p class="about__text2">
-            We have extensive experience in moving autonomous vehicles, ensuring
-            their safe and efficient delivery.
-          </p>
+        </div>
+
+        <div class="about__card three">
+          <div class="about__img">
+            <img src="/public/imgs/img3.jpg" alt="" />
+          </div>
+
+          <div class="about__info">
+            <div class="about__i3 icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M4.5 12a7.5 7.5 0 0 0 15 0m-15 0a7.5 7.5 0 1 1 15 0m-15 0H3m16.5 0H21m-1.5 0H12m-8.457 3.077 1.41-.513m14.095-5.13 1.41-.513M5.106 17.785l1.15-.964m11.49-9.642 1.149-.964M7.501 19.795l.75-1.3m7.5-12.99.75-1.3m-6.063 16.658.26-1.477m2.605-14.772.26-1.477m0 17.726-.26-1.477M10.698 4.614l-.26-1.477M16.5 19.794l-.75-1.299M7.5 4.205 12 12m6.894 5.785-1.149-.964M6.256 7.178l-1.15-.964m15.352 8.864-1.41-.513M4.954 9.435l-1.41-.514M12.002 12l-3.75 6.495"
+                />
+              </svg>
+            </div>
+            <h2 class="about__text1">
+              Engineered <br />
+              Focused
+            </h2>
+            <p class="about__text2">
+              We have a unique focus on transporting engineering and prototype
+              vehicles.
+            </p>
+          </div>
+        </div>
+
+        <div class="about__card four">
+          <div class="about__img">
+            <img src="/public/imgs/img1.jpg" alt="" />
+          </div>
+
+          <div class="about__info">
+            <div class="about__i4 icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z"
+                />
+              </svg>
+            </div>
+            <h2 class="about__text1">
+              Safe and <br />
+              Efficient
+            </h2>
+            <p class="about__text2">
+              We have extensive experience in moving autonomous vehicles,
+              ensuring their safe and efficient delivery.
+            </p>
+          </div>
         </div>
       </div>
     </section>
     <!-- about ends -->
 
     <!-- gallery starts -->
+    <a name="gallery"></a>
     <!-- Create links -->
-    <a data-fslightbox="gallery" href="/img1.jpg">
-      <img src="/img1.jpg" alt="" /> An image
-    </a>
+    <section class="gallery__container">
+      <div class="gallery__title main-wrapper">
+        <h3 class="section__title">Gallery</h3>
+        <!-- <h4 class="about__text2">Gorban Transportation Inc.</h4> -->
+      </div>
+      <div class="gallery main-wrapper">
+        <a data-fslightbox="gallery" href="/21.JPG">
+          <img src="/21.JPG" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/22.JPG">
+          <img src="/22.JPG" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/3.JPG">
+          <img src="/3.JPG" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/4.jpg">
+          <img src="/4.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/1.jpeg">
+          <img src="/1.jpeg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/5.jpg">
+          <img src="/5.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/6.jpg">
+          <img src="/6.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/7.jpg">
+          <img src="/7.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/8.jpg">
+          <img src="/8.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/13.jpg">
+          <img src="/13.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/14.jpg">
+          <img src="/14.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/15.jpg">
+          <img src="/15.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/9.jpg">
+          <img src="/9.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/10.jpg">
+          <img src="/10.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/11.jpg">
+          <img src="/11.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/12.jpg">
+          <img src="/12.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/26.JPEG">
+          <img src="/26.JPEG" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/img1.jpg">
+          <img src="/img1.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/17.jpg">
+          <img src="/17.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/19.jpg">
+          <img src="/19.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/23.JPG">
+          <img src="/23.JPG" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/24.jpg">
+          <img src="/24.jpg" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/25.JPG">
+          <img src="/25.JPG" alt="" />
+        </a>
+        <a data-fslightbox="gallery" href="/2.JPEG">
+          <img src="/2.JPEG" alt="" />
+        </a>
+      </div>
+    </section>
+
     <!-- gallery ends -->
 
     <!-- contact starts -->
